# MicroRTS-Py

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  build.ps1  build.sh  hello_world.py  hello_world_pettingzoo.py  pyproject.toml  trace1.xml
.github/workflows/: pre-commit.yml  pypi.yml  tests.yml
PCG/: pcg.py
PCG/maps/: pcg_00000.xml  pcg_00001.xml  pcg_00002.xml  pcg_00003.xml  pcg_00004.xml  pcg_00005.xml  pcg_00006.xml  pcg_00007.xml  pcg_00008.xml  pcg_00009.xml  pcg_00010.xml  pcg_00011.xml  pcg_00012.xml  pcg_00013.xml  pcg_00014.xml  pcg_00015.xml  pcg_00016.xml  pcg_00017.xml  pcg_00018.xml  pcg_00019.xml  pcg_00020.xml  pcg_00021.xml  pcg_00022.xml  pcg_00023.xml  pcg_00024.xml  pcg_00025.xml  pcg_00026.xml  pcg_00027.xml  pcg_00028.xml  pcg_00029.xml  pcg_00030.xml  pcg_00031.xml  pcg_00032.xml  pcg_00033.xml  pcg_00034.xml  pcg_00035.xml  pcg_00036.xml  pcg_00037.xml  pcg_00038.xml  pcg_00039.xml  (+960 more)
experiments/: ppo_gridnet.py  ppo_gridnet_eval.py  ppo_gridnet_large.py
gym_microrts/: petting_zoo_api.py
gym_microrts/envs/: vec_env.py
tests/: test_e2e.py  test_mask.py  test_observation.py  test_pettingzoo_api.py  test_reward.py
