[project]
name = "gym-microrts"
version = "0.1.0"
description = ""
authors = [{ name = "Costa Huang", email = "costa.huang@outlook.com" }]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "peewee>=3.14.8,<4",
    "jpype1>=1.5.0,<2",
    "gymnasium>=0.29.1,<0.30",
    "numpy<2",
]

[project.optional-dependencies]
spyder = ["spyder>=5.1.5,<6"]


[tool.uv]
package = true

[tool.uv.build-backend]
module-root= ""

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"