[project]
name = "gym-microrts"
version = "0.1.0"
description = ""
authors = [{name = "Costa Huang", email = "costa.huang@outlook.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "peewee>=4.0.2",
    "PettingZoo>=1.25.0",
    "jpype1>=1.6.0",
    "gymnasium>=1.2.3",
    "numpy<2",
    "pillow>=12.1.1",
]

[project.optional-dependencies]
spyder = ["spyder>=6.1.3"]
dev = [
    "tensorboard>=2.20.0",
    "wandb>=0.25.1",
    "trueskill>=0.4.5",
    "stable-baselines3>=2.7.1",
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "torchaudio>=2.5.0",
    "pytest>=9.0.2",
    "pre-commit>=4.5.1",
]

[tool.uv]
index-url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-gpu" }
torchvision = { index = "pytorch-gpu" }
torchaudio = { index = "pytorch-gpu" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
exclude = [
    "gym_microrts/microrts/build/*",
    "gym_microrts/microrts/resources",
    "gym_microrts/microrts/src",
    "gym_microrts/microrts/data",
    "gym_microrts/microrts/lib/*.jar",
]
