[project]
name = "gym-microrts"
version = "0.1.0"
description = ""
authors = [{name = "Costa Huang", email = "costa.huang@outlook.com"}]
readme = "README.md"
requires-python = ">=3.12.3,<4.0"
dependencies = [
    "peewee>=4.0.2",
    "PettingZoo>=1.25.0",
    "jpype1>=1.6.0",
    "gymnasium>=1.2.3",
    "numpy<2",
    "pillow>=12.1.1",
]

[project.optional-dependencies]
spyder = ["spyder>=6.1.3"]
dev = [
    "trueskill>=0.4.5",
    "stable-baselines3>=2.7.1",
    "torch~=2.10.0",
    "pytest>=9.0.2",
    "pre-commit>=4.5.1",
]

[tool.uv]
index-url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-gpu-src" }
torchvision = { index = "pytorch-gpu-src" }
torchaudio = { index = "pytorch-gpu-src" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
exclude = [
    "gym_microrts/microrts/build/*",
    "gym_microrts/microrts/resources",
    "gym_microrts/microrts/src",
    "gym_microrts/microrts/data",
    "gym_microrts/microrts/lib/*.jar",
]